--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "pg_search", from = "src"}]
 [tool.poetry.dependencies]
 python = "^3.12"
 psycopg = {extras = ["binary"], version = "^3.1.18"}
+click = "^8.1.7"
+jinja2 = "^3.1.3"
 
 
 [build-system]
